--- a/TodoApi/appsettings.json
+++ b/TodoApi/appsettings.json
@@ -9,9 +9,9 @@
     "connectionString": "Server = DESKTOP-IU46U34\\EXPRESS2 ; Database = TodossDb2; Trusted_Connection = True; TrustServerCertificate = True"
   },
   "Jwt": {
-    "Issuer": "https://joydipkanjilal.com/",
-    "Audience": "https://joydipkanjilal.com",
-    "Key": "This is a sample secret key - please don't use in a production environment."
+    "Issuer": "https://decagon.com",
+    "Audience": "decadev",
+    "Key": "This is my secret key for jwt"
   },
 
 
